--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,7 @@
   outline: none;
   box-sizing: border-box;
   font-family: 'Work Sans', sans-serif;
+  
 }
 a{
   text-decoration: none;
@@ -19,6 +20,7 @@ header{
   position: sticky;
   z-index: 30;
   top: 0;
+  /* box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px; */
 }
 nav{
   display: flex;
@@ -26,12 +28,14 @@ nav{
   justify-content: space-between;
   align-items: center;
   background-color: #f1f1f1;
+  cursor: pointer;
 }
 .nav__menu-bar{
   display: flex;
   flex-direction: column;
   row-gap: 6px;
   cursor: pointer;
+  
 }
 .nav__menu-bar div{
   width: 40px;
@@ -59,6 +63,7 @@ nav{
   font-size: 18px; 
   position: relative;
   transition: all 0.2s;
+  cursor: pointer;
 }
 
 .nav__link:hover{
@@ -90,7 +95,7 @@ nav{
     height: 6px;
     bottom: -16px;
     left: 0;
-    background-color: black;
+    background-color: blueviolet;
     transition: all 0.2s;
   }
   
@@ -105,4 +110,12 @@ nav{
   border-style: solid;
   border-width: 0 20px 20px 0;
   border-color: transparent #1a202c transparent transparent;
+}
+.phonedetail-modal table{
+  border: 1px solid #000;
+  text-align: center;
+}
+.phonedetail-modal td{
+  border: 1px solid #000;
+  padding: 10px;
 }
